# analytics

./: .ghci  .gitignore  .travis.yml  AUTHORS.markdown  Analytics-Datalog-Internal.html  Analytics-Datalog.html  Data-Analytics-Active-Event.html  Data-Analytics-Active-Observable.html  Data-Analytics-Active-Observer.html  Data-Analytics-Active-Promise.html  Data-Analytics-Active-STM.html  Data-Analytics-Active-Subscription.html  Data-Analytics-Active-Task.html  Data-Analytics-Active.html  Data-Analytics-Approximate-HyperLogLog-Config.html  Data-Analytics-Approximate-HyperLogLog-Type.html  Data-Analytics-Approximate-HyperLogLog.html  Data-Analytics-Approximate-Log.html  Data-Analytics-Approximate-Mass.html  Data-Analytics-Approximate-Set-HyperLogLog-Internal.html  Data-Analytics-Approximate-Set-HyperLogLog.html  Data-Analytics-Approximate-Summation.html  Data-Analytics-Approximate-Tropical.html  Data-Analytics-Approximate-Type.html  Data-Analytics-Approximate.html  Data-Analytics-Bits.html  Data-Analytics-Combinators.html  Data-Analytics-Compression-Arithmetic.html  Data-Analytics-Compression-Bits.html  Data-Analytics-Console-Options.html  Data-Analytics-Console-Unicode.html  Data-Analytics-Console.html  Data-Analytics-Datalog-Atom.html  Data-Analytics-Datalog-Atomic.html  Data-Analytics-Datalog-Evaluation-Naive.html  Data-Analytics-Datalog-Monad.html  Data-Analytics-Datalog-Prompt.html  Data-Analytics-Datalog-Query.html  Data-Analytics-Datalog-Row.html  Data-Analytics-Datalog-Subst.html  (+198 more)
cbits/: MurmurHash3.c  crc32.c  debruijn.c  fallocate.c  fast.c  hs_snappy.cpp  rolling.c  sse.c  storage.c
contrib/: HyperLogLog.hs  StatVar.hs  Task.hs  Wind.hs
examples/: Closure.hs  Dynamic.hs  Open.hs  RBAC.hs
includes/: MurmurHash3.h  config.h.in  hs_snappy.h
m4/: ax_c_have_attribute.m4  ax_c_have_attribute_cold.m4  ax_check_defined.m4  ax_gcc_x86_cpuid.m4
man/: Makefile.am  analytics.1
notes/: O_DIRECT.md  closed-semirings.md  haar.md  lambert.md  names.md  papers.md  quotes.md
scripts/: overview.sh
src/: Analytics-Datalog-Internal.html  Analytics-Datalog.html  Analytics.hs  Data-Analytics-Active-Event.html  Data-Analytics-Active-Observable.html  Data-Analytics-Active-Observer.html  Data-Analytics-Active-Promise.html  Data-Analytics-Active-STM.html  Data-Analytics-Active-Subscription.html  Data-Analytics-Active-Task.html  Data-Analytics-Active.html  Data-Analytics-Approximate-HyperLogLog-Config.html  Data-Analytics-Approximate-HyperLogLog-Type.html  Data-Analytics-Approximate-HyperLogLog.html  Data-Analytics-Approximate-Log.html  Data-Analytics-Approximate-Mass.html  Data-Analytics-Approximate-Set-HyperLogLog-Internal.html  Data-Analytics-Approximate-Set-HyperLogLog.html  Data-Analytics-Approximate-Summation.html  Data-Analytics-Approximate-Tropical.html  Data-Analytics-Approximate-Type.html  Data-Analytics-Approximate.html  Data-Analytics-Bits.html  Data-Analytics-Combinators.html  Data-Analytics-Compression-Arithmetic.html  Data-Analytics-Compression-Bits.html  Data-Analytics-Console-Options.html  Data-Analytics-Console-Unicode.html  Data-Analytics-Console.html  Data-Analytics-Datalog-Atom.html  Data-Analytics-Datalog-Atomic.html  Data-Analytics-Datalog-Evaluation-Naive.html  Data-Analytics-Datalog-Monad.html  Data-Analytics-Datalog-Prompt.html  Data-Analytics-Datalog-Query.html  Data-Analytics-Datalog-Row.html  Data-Analytics-Datalog-Subst.html  Data-Analytics-Datalog-Table.html  Data-Analytics-Datalog-Term.html  Data-Analytics-Datalog.html  (+54 more)
src/Analytics/: Datalog.hs  Diagnostic.hs  Match.hs  Meta.hs  Pretty.hs  Prompt.hs  Query.hs  Relation.hs  Syntax.hs  Term.hs  Unification.hs  Variable.hs
src/Analytics/Datalog/: Internal.hs  Prompt.hs
src/Analytics/Internal/: Datalog.hs  Query.hs
src/Data/: Analytics.hs
src/Data/Analytics/: Active.hs  Approximate.hs  Bitmap.hs  Bits.hs  Broadword.hs  Combinators.hs  Console.hs  Datalog.hs  Dictionary.hs  File.hs  Instances.hs  Key.hs  Mass.hs  Match.hs  Moments.hs  Morton.hs  Numeric.hs  Prompt.hs  Query.hs  Reflection.hs  Relation.hs  Rolling.hs  Sharing.hs  Table.hs  Task.hs  Term.hs  Variable.hs
src/Data/Analytics/Active/: Event.hs  Observable.hs  Observer.hs  Promise.hs  STM.hs  Subscription.hs  Task.hs
src/Data/Analytics/Approximate/: Compensated.hs  HyperLogLog.hs  Log.hs  Mass.hs  Summation.hs  Tropical.hs  Type.hs
src/Data/Analytics/Approximate/HyperLogLog/: Config.hs  Type.hs
src/Data/Analytics/Approximate/Set/: HyperLogLog.hs
src/Data/Analytics/Approximate/Set/HyperLogLog/: Internal.hs
src/Data/Analytics/Compression/: Arithmetic.hs  Bits.hs  Snappy.hs
src/Data/Analytics/Compression/Snappy/: Internal.hs  Lazy.hsc
src/Data/Analytics/Console/: Options.hs  Unicode.hsc
src/Data/Analytics/Datalog/: Atom.hs  Atomic.hs  Monad.hs  Prompt.hs  Query.hs  Row.hs  Subst.hs  Table.hs  Term.hs
src/Data/Analytics/Datalog/Evaluation/: Naive.hs
src/Data/Analytics/Dictionary/: Class.hs  Pop.hs
src/Data/Analytics/Dictionary/Select/: Class.hs
src/Data/Analytics/Hash/: CRC32.hs  Double.hs  Rolling.hs
src/Data/Analytics/Internal/: Atom.hs  Atomic.hs  Datalog.hs  Prompt.hs  Query.hs  Subst.hs  Term.hs  Typeable.hs
src/Data/Analytics/Key/: Heap.hs  Interleaving.hs  Node.hs  Program.hs  Schedule.hs
src/Data/Analytics/Morton/: Heap.hs  Node.hs  Schedule.hs  Type.hs
src/Data/Analytics/Numeric/: Compensated.hs  Fast.hs  Log.hs  Moments.hs  Tropical.hs
src/Data/Analytics/Statistics/: Moments.hs  Variances.hs
src/Data/Analytics/Storage/: List.hs  Morton.hs  Schedule.hs
src/Data/Analytics/Storage/Morton/: Heap.hs  Node.hs
src/Data/Analytics/Succinct/Rank/: Class.hs  Pop.hs
src/Data/Analytics/Succinct/Select/: Class.hs
src/Data/Analytics/Task/: Event.hs  Monad.hs  Observable.hs  Observer.hs  Promise.hs  STM.hs  Subscription.hs
tests/: doctests.hsc
tests/snappy/: Benchmarks.hs  Functions.hs  Properties.hs  Snappy-Properties.hs  Speedy.hs
tests/snappy/test-data/: huge.json
wip/: AltProblem.hs  Cube.hs  List.hs  Problem.hs
