name:          analytics
category:      analytics
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/analytics/analytics/
bug-reports:   http://github.com/analytics/analytics/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
synopsis:      A work in progress analytics engine for Haskell
description:
  A work in progress analytics engine for Haskell
  .
  <https://github.com/analytics/analytics/tree/master/examples>
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config
  Makefile.am
  Makefile.in
  aclocal.m4
  analytics.buildinfo.in
  configure
  configure.ac
  config.h.in
  depcomp
  install-sh
  m4/*.m4
  missing
  man/Makefile.am
  man/Makefile.in
  man/analytics.1
  cbits/snappy/AUTHORS
  cbits/snappy/COPYING
  cbits/snappy/Makefile.am
  cbits/snappy/NEWS
  cbits/snappy/README
  cbits/snappy/configure.ac
  cbits/snappy/*.cc
  cbits/snappy/*.h
  cbits/snappy/*.h.in
  cbits/snappy/*.txt
  cbits/snappy/m4/*.m4

source-repository head
  type: git
  location: git://github.com/analytics/analytics.git

-- cabal install -f-repl will disable the repl
flag repl
  description: Build the REPL.
  default:     True
  manual:      True

-- cabal install -fast will turn on painfully slow optimizations
flag ast
  description: Turn all the knobs to 11.
  default: False
  manual: True


library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall -fobject-code
  if flag(ast)
    ghc-options: -O2 -fmax-simplifier-iterations=10 -fdicts-cheap
    cpp-options: -DSPECIALIZE_INSTANCES=1
  include-dirs: . includes cbits/snappy dist/build/autogen
  cpp-options: -Idist/build/autogen
  extra-libraries: stdc++
  -- cc-options: -std=c99
  c-sources:
    cbits/rolling.c
    cbits/debruijn.c
    cbits/fast.c
    cbits/storage.c
    cbits/crc32.c

    cbits/hs_snappy.cpp

    cbits/snappy/snappy.cc
    cbits/snappy/snappy-sinksource.cc
    cbits/snappy/snappy-stubs-internal.cc
    cbits/snappy/snappy-c.cc

  if os(windows)
    cpp-options: -DOS_WINDOWS=1

  exposed-modules:
    Data.Analytics.Approximate
    Data.Analytics.Approximate.HyperLogLog
    Data.Analytics.Approximate.HyperLogLog.Config
    Data.Analytics.Approximate.HyperLogLog.Type
    Data.Analytics.Approximate.Mass
    Data.Analytics.Approximate.Type
    Data.Analytics.Bits
    Data.Analytics.Combinators
    Data.Analytics.Compression.Arithmetic
    Data.Analytics.Compression.Bits
    Data.Analytics.Compression.Snappy 
    Data.Analytics.Compression.Snappy.Lazy
    Data.Analytics.Console
    Data.Analytics.Console.Options
    Data.Analytics.Console.Unicode
    Data.Analytics.Datalog
    Data.Analytics.Datalog.Atom
    Data.Analytics.Datalog.Evaluation.Naive
    Data.Analytics.Datalog.Monad
    Data.Analytics.Datalog.Prompt
    Data.Analytics.Datalog.Query
    Data.Analytics.Datalog.Row
    Data.Analytics.Datalog.Subst
    Data.Analytics.Datalog.Table
    Data.Analytics.Datalog.Term
    Data.Analytics.File
    Data.Analytics.Hash.CRC32
    Data.Analytics.Hash.Double
    Data.Analytics.Hash.Rolling
    Data.Analytics.Instances
    Data.Analytics.Morton
    Data.Analytics.Morton.Node
    Data.Analytics.Morton.Heap
    Data.Analytics.Morton.Schedule
    Data.Analytics.Morton.Type
    Data.Analytics.Numeric.Compensated
    Data.Analytics.Numeric.Fast
    Data.Analytics.Numeric.Log
    Data.Analytics.Numeric.Moments
    Data.Analytics.Numeric.Tropical
    Data.Analytics.Reflection
    Data.Analytics.Sharing
    Data.Analytics.Task
    Data.Analytics.Task.Event
    Data.Analytics.Task.Monad
    Data.Analytics.Task.Observable
    Data.Analytics.Task.Observer
    Data.Analytics.Task.Promise
    Data.Analytics.Task.STM
    Data.Analytics.Task.Subscription

  other-modules:
    Paths_analytics
    Data.Analytics.Compression.Snappy.Internal

  build-depends:
    array                     >= 0.4     && < 0.5,
    base                      >= 4.4     && < 5,
    binary                    >= 0.5     && < 0.6,
    bytestring                >= 0.9.2   && < 0.11,
    cereal                    >= 0.3.5   && < 0.4,
    cereal-vector             >= 0.2     && < 0.3,
    optparse-applicative      >= 0.5     && < 0.6,
    comonad                   >= 3       && < 4,
    configurator              >= 0.2.0.2 && < 0.3,
    containers                >= 0.4.2   && < 0.6,
    contravariant             >= 0.4     && < 1,
    data-default              >= 0.5     && < 0.6,
    ekg                       >= 0.3.1.2 && < 0.4,
    filepath                  >= 1.3     && < 1.4,
    generic-deriving          >= 1.4     && < 1.5,
    ghc-prim,
    hashable                  >= 1.2     && < 1.3,
    haskeline                 >= 0.7     && < 0.8,
    lens                      >= 3.9     && < 4,
    logict                    >= 0.6     && < 0.7,
    MonadCatchIO-transformers >= 0.3     && < 0.4,
    mtl                       >= 2.1.1   && < 2.2,
    pointed                   >= 3       && < 4,
    prelude-extras            >= 0.3     && < 1,
    parallel                  >= 3.2     && < 3.4,
    profunctors               >= 3.3     && < 4,
    reflection                >= 1.1.6   && < 2,
    semigroupoids             == 3.*,
    semigroups                >= 0.9     && < 1,
    stm                       >= 2.3     && < 2.5,
    tagged                    >= 0.4.4   && < 1,
    template-haskell,
    transformers              >= 0.2     && < 0.4,
    transformers-compat       >= 0.1     && < 1,
    unix                      >= 2.5     && < 2.7,
    unordered-containers      >= 0.2.1   && < 0.3,
    vector                    >= 0.10    && < 0.11,
    void                      >= 0.5.10  && < 1

executable analytics
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T -v0
  if !flag(repl)
    buildable: False
  else
    build-depends: base < 5, analytics >= 0.1

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    analytics >= 0.1,
    base < 5,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath,
    cereal-vector >= 0.2.0.0
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests

test-suite snappy-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/snappy
  main-is:        Snappy-Properties.hs
  other-modules:  Benchmarks Functions Speedy
  ghc-options:    -threaded -O0 -rtsopts
  cpp-options:    -DASSERTS -DHAVE_DEEPSEQ
  default-language: Haskell2010

  build-depends:
    base < 5,
    bytestring,
    QuickCheck >= 2.4,
    analytics >= 0.1,
    test-framework,
    test-framework-quickcheck2
