name:          analytics
category:      analytics
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/analytics/analytics/
bug-reports:   http://github.com/analytics/analytics/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
synopsis:      A work in progress analytics engine for Haskell
description:
  A work in progress analytics engine for Haskell
  .
  <https://github.com/analytics/analytics/tree/master/examples>
  .
  <<overview.png>>
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config
  Makefile.am
  Makefile.in
  aclocal.m4
  analytics.buildinfo.in
  configure
  configure.ac
  config.h.in
  depcomp
  install-sh
  m4/*.m4
  missing
  man/Makefile.am
  man/Makefile.in
  man/analytics.1

source-repository head
  type: git
  location: git://github.com/analytics/analytics.git

-- cabal install -f-repl will disable the repl
flag repl
  description: Build the REPL.
  default:     True
  manual:      True

-- cabal install -fast will turn on painfully slow optimizations
flag ast
  description: Turn all the knobs to 11.
  default: False
  manual: True

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall -fobject-code


  if os(darwin)
    ghc-options: -optl -fexceptions

  if os(windows)
    cpp-options: -DOS_WINDOWS=1

  if arch(i386)
    cc-options: -march=i686 -m32 -msse2

  if flag(ast)
    ghc-options: -O2 -fmax-simplifier-iterations=10 -fdicts-cheap
    cpp-options: -DSPECIALIZE_INSTANCES=1

  include-dirs: . includes
  c-sources:
    cbits/storage.c

  exposed-modules:
    Data.Analytics.Combinators
    Data.Analytics.Console
    Data.Analytics.Console.Options
    Data.Analytics.Console.Unicode
    Data.Analytics.File
    Data.Analytics.Instances
    Data.Analytics.Key
    Data.Analytics.Key.Node
    Data.Analytics.Key.Heap
    Data.Analytics.Key.Interleaving
    Data.Analytics.Key.Program
    Data.Analytics.Key.Schedule
    Data.Analytics.Numeric.Moments
    Data.Analytics.Numeric.Tropical
    Data.Analytics.Sharing
    Data.Analytics.Succinct.Rank.Class
    Data.Analytics.Succinct.Rank.Pop
    Data.Analytics.Succinct.Select.Class
    Data.Analytics.Task
    Data.Analytics.Task.Event
    Data.Analytics.Task.Monad
    Data.Analytics.Task.Observable
    Data.Analytics.Task.Observer
    Data.Analytics.Task.Promise
    Data.Analytics.Task.STM
    Data.Analytics.Task.Subscription

  other-modules:
    Paths_analytics

  build-depends:
    approximate               >= 0.1.1   && < 1,
    array                     >= 0.4     && < 0.5,
    base                      >= 4.4     && < 5,
    binary                    >= 0.5     && < 0.8,
    bits                      >= 0.2     && < 1,
    bytes                     >= 0.7     && < 1,
    bytestring                >= 0.9.2   && < 0.11,
    cereal                    >= 0.3.5   && < 0.4,
    cereal-vector             >= 0.2     && < 0.3,
    compensated               >= 0.3     && < 1,
    optparse-applicative      >= 0.5     && < 0.6,
    comonad                   >= 3       && < 4,
    configurator              >= 0.2.0.2 && < 0.3,
    containers                >= 0.4.2   && < 0.6,
    contravariant             >= 0.4     && < 1,
    data-default              >= 0.5     && < 0.6,
    ekg                       >= 0.3.1.2 && < 0.4,
    filepath                  >= 1.3     && < 1.4,
    generic-deriving          >= 1.4     && < 1.6,
    ghc-prim,
    hash                      >= 0.2.0.1 && < 1,
    hashable                  >= 1.2     && < 1.3,
    hashable-extras           >= 0.1.0.1 && < 1,
    haskeline                 >= 0.7     && < 0.8,
    lens                      >= 3.9     && < 4,
    log-domain                >= 0.6     && < 1,
    logict                    >= 0.6     && < 0.7,
    lz4                       >= 0.2.2   && < 0.3,
    MonadCatchIO-transformers >= 0.3     && < 0.4,
    mtl                       >= 2.1.1   && < 2.2,
    pointed                   >= 3       && < 4,
    prelude-extras            >= 0.3     && < 1,
    parallel                  >= 3.2     && < 3.4,
    profunctors               >= 3.3     && < 4,
    reflection                >= 1.3     && < 2,
    semigroupoids             == 3.*,
    semigroups                >= 0.9     && < 1,
    stm                       >= 2.3     && < 2.5,
    tagged                    >= 0.4.4   && < 1,
    template-haskell,
    transformers              >= 0.2     && < 0.4,
    transformers-compat       >= 0.1     && < 1,
    unix                      >= 2.5     && < 2.7,
    unordered-containers      >= 0.2.1   && < 0.3,
    vector                    >= 0.10    && < 0.11,
    void                      >= 0.5.10  && < 1

executable analytics
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T -v0
  if !flag(repl)
    buildable: False
  else
    build-depends: base < 5, analytics >= 0.1

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base < 5,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath,
    cereal-vector >= 0.2
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
