name:          analytics
category:      analytics
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/analytics/analytics/
bug-reports:   http://github.com/analytics/analytics/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
synopsis:      A work in progress analytics engine for Haskell
description:
  A work in progress analytics engine for Haskell
  .
  <https://github.com/analytics/analytics/tree/master/examples>
build-type: Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/analytics/analytics.git

-- cabal install -f-repl will disable the repl
flag repl
  description: Build the REPL.
  default:     False
  manual:      True

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall -fobject-code

  c-sources: cbits/sse.c
  cc-options: -msse4

  if os(darwin)
    ghc-options: -optl -fexceptions
    cpp-options: -DOS_X

  if os(windows)
    cpp-options: -DOS_WINDOWS=1

  -- ghc-options: -O2 -fmax-simplifier-iterations=10 -fdicts-cheap
  -- cpp-options: -DSPECIALIZE_INSTANCES=1

  exposed-modules:
    Data.Analytics.Bitmap
    Data.Analytics.Dictionary
    Data.Analytics.Dictionary.Pop

  other-modules:
    Paths_analytics

  build-depends:
    array                     >= 0.4     && < 0.5,
    base                      >= 4.4     && < 5,
    binary                    >= 0.5     && < 0.8,
    bits                      >= 0.2     && < 1,
    bytes                     >= 0.7     && < 1,
    bytestring                >= 0.9.2   && < 0.11,
    cereal                    >= 0.3.5   && < 0.4,
    cereal-vector             >= 0.2     && < 0.3,
    containers                >= 0.4.2   && < 0.6,
    deepseq                   >= 1.3     && < 1.4,
    filepath                  >= 1.3     && < 1.4,
    ghc-prim,
    hash                      >= 0.2.0.1 && < 1,
    hashable                  >= 1.2     && < 1.3,
    hashable-extras           >= 0.1.0.1 && < 1,
    lens                      >= 3.9     && < 4,
    mmap                      >= 0.5.8   && < 0.6,
    mtl                       >= 2.1.1   && < 2.2,
    reflection                >= 1.3     && < 2,
    template-haskell,
    transformers              >= 0.2     && < 0.4,
    unix                      >= 2.5     && < 2.7,
    vector                    >= 0.10    && < 0.11

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base < 5,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath,
    cereal-vector >= 0.2
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
